# c2

./: CMakeLists.txt  LICENSE.txt  c2_canny.h  c2_channel_cast.h  c2_colormap_vga1.h  c2_gauss.h  c2_gradient.h  c2_matrix.h  main.cpp
cmake/: fftw3.cmake
filters/: CMakeLists.txt  c2_canny.h  c2_channel_cast.h  c2_gauss.h  c2_gradient.h  c2_matrix.h  main.cpp
fractal/: CMakeLists.txt  bush.ls  bush2.ls  c2_2graph.h  c2_fbm.cpp  c2_fbm_hcalc.cpp  c2_fbm_hcalc.h  c2_ifs.cpp  c2_julia.cpp  c2_koch.cpp  c2_koch.h  c2_lines2mgl.cpp  c2_lines2png.cpp  c2_lines2txt.cpp  c2_lsystem.cpp  c2_lsystem.h  c2_lsystem.ypp  c2_lsystem_iter.cpp  c2_lsystem_parser.ypp  c2_lsystem_scanner.l  c2_mandelbrot.cpp  c2_mandelbulb.cpp  c2_turtle.h  c2_turtle_scanner.l  dragon.ls  flower.ls  fractint.ls  gilbert.ls  gosper.ls  hanmer3_0.ls  hiwaymed.ls  island.ls  koch.ls  koch_curve.ls  mcworter.ls  mcworter1.ls  mozaic.ls  net.ls  oj-plants.ls  parallel_mgl2png.py  (+11 more)
vc9/: c2.sln  c2.vcproj  fractal.vcproj  vizualizer.vcproj
vizualizer/: CMakeLists.txt  asp_excs.h  asp_gauss.c  asp_gauss.h  asp_interpolate.c  asp_interpolate.h  asp_properties.cpp  asp_properties.h  asp_readdir.cpp  asp_readdir.h  asp_singleton.h  rotate.cpp  tool_config.cpp  tool_config.h  tool_factory.h  viz_console.cpp  viz_console.h  viz_event.cpp  viz_event.h  viz_main.cpp  viz_mainwindow.cpp  viz_mainwindow.h  viz_obj.cpp  viz_obj.h  viz_segments.cpp  viz_segments.h  viz_sphere.cpp  viz_sphere.h  viz_surface.cpp  viz_surface.h  viz_triang.cpp  viz_triang.h  viz_utils.c  viz_utils.h  vizgl2.c
win32/lib/: glut32.exp  glut32.lib  glut32d.exp  glut32d.lib  libglib.exp  libglib.lib  libglib_d.exp  libglib_d.lib  libjpeg.lib
